# ai-agents

./: .gitignore  pyproject.toml
a2a/: pyproject.toml
a2a/langgraph_agent/: server.py
a2a/remote_adk_agent/: agent.py
a2a/user_facing_agent/: agent.py
crewai/content-pipline-agent/: crewai_flow.html  main.py  pyproject.toml  seo.py  tools.py  viral.py
crewai/job-hunter/: main.py  pyproject.toml
crewai/job-hunter/knowledge/: resume.txt
crewai/job-hunter/output/: company_research.md  interview_prep.md  rewritten_resume.md
google-adk/email-refiner/: main.py  pyproject.toml
google-adk/email-refiner/email_refiner/: agent.py  prompt.py  tools.py
google-adk/financial-advisor/: OLLAMA.md  main.py  pyproject.toml  tools.py
google-adk/financial-advisor/financial_advisor/: agent.py  data_analyst.py  financial_analyst.py  news_analyst.py  ollama.py  prompt.py
google-adk/travel-advisor/: api.ipynb  main.py  pyproject.toml  runner.ipynb  session.db
google-adk/travel-advisor/travel_advisor/: agent.py  prompt.py
google-adk/youtube-shorts-maker/: pyproject.toml
google-adk/youtube-shorts-maker/youtube_shorts_maker/: agent.py
google-adk/youtube-shorts-maker/youtube_shorts_maker/sub_agents/asset_generator/: agent.py
google-adk/youtube-shorts-maker/youtube_shorts_maker/sub_agents/asset_generator/image_generator/: agent.py
google-adk/youtube-shorts-maker/youtube_shorts_maker/sub_agents/asset_generator/image_generator/image_builder/: agent.py  tools.py
google-adk/youtube-shorts-maker/youtube_shorts_maker/sub_agents/asset_generator/image_generator/prompt_builder/: agent.py  model.py
google-adk/youtube-shorts-maker/youtube_shorts_maker/sub_agents/asset_generator/voice_generator/: agent.py  tools.py
google-adk/youtube-shorts-maker/youtube_shorts_maker/sub_agents/content_planner/: agent.py  model.py
google-adk/youtube-shorts-maker/youtube_shorts_maker/sub_agents/video_assembler/: agent.py  tools.py
langgraph/hi-langgraph/: chatbot.ipynb  langgraph.json  main.ipynb  main.py  pyproject.toml  study.ipynb
langgraph/multi-agent-architectures/: agent-as-tool-architecture.py  langgraph.json  main.ipynb  main.py  network-architecture.ipynb  network-architecture.py  prebuilt-agents.py  pyproject.toml  supervisor-architecture.py
langgraph/network-manager/: README.md  langgraph.json  main.py  pyproject.toml
langgraph/network-manager/agents/: __init__.py  workflow.py
langgraph/network-manager/agents/common/: __init__.py
langgraph/network-manager/agents/general_chatbot/: __init__.py  agent.py
langgraph/network-manager/agents/network_manager/: agent.py
langgraph/network-manager/agents/network_manager/tools/: __init__.py  models.py
langgraph/network-manager/agents/tech_reporter/: agent.py
langgraph/network-manager/agents/traffic_controller/: agent.py
langgraph/network-manager/agents/traffic_controller/tools/: __init__.py  models.py
langgraph/network-manager/config/: __init__.py
langgraph/network-manager/network/: infrastructure.py  models.py
langgraph/test-agents/: main.py  pyproject.toml
langgraph/thumbnail-maker/: graph.py  langgraph.json  main.ipynb  main.py  pyproject.toml
langgraph/tutor-agent/: langgraph.json  main.py  pyproject.toml
langgraph/tutor-agent/agents/: classification_agent.py  common.py  feynman_agent.py  quiz_agent.py  teacher_agent.py
langgraph/tutor-agent/tools/: common.py  quiz_tools.py
langgraph/workflow-arch/: evaluator-optimizer.ipynb  main.ipynb  main.py  orchestrator.ipynb  parallel.ipynb  pyproject.toml  routing.ipynb
langgraph/workflow-test/: main.py  pyproject.toml  tests.py
openai/chatgpt/: chat-gpt-clone-memory.db  chat-history.db  main.py  pyproject.toml  simple-cli-chatbot.py
openai/customer-support/: main.py  pyproject.toml  workflow.py
openai/customer-support/guardrails/: output.py
openai/customer-support/models/: __init__.py
openai/deep-chat/: main.py  pyproject.toml
openai/simple-agent/: pyproject.toml
openai/simple-agent/src/simple_agent/: __init__.py
openai/simple-chatbot-with-tool-calls/: main.py  pyproject.toml
openai/simple-chatbot-with-tool-calls/src/simple_chatbot_with_tool_calls/: __init__.py
(+3 files in other folders)
