[project]
name = "email-refiner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk>=1.12.0",
    "google-genai>=1.31.0",
    "litellm>=1.76.0",
    "ollama-wrapper"
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.uv.sources]
ollama-wrapper = { path = "../../packages/ollama-wrapper", editable = true }