[project]
name = "travel-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk[eval]>=1.12.0",
    "google-genai>=1.31.0",
    "litellm>=1.76.0",
    "requests>=2.32.5",
    "sseclient-py>=1.8.0",
    "ollama-wrapper",
]

[tool.uv.sources]
ollama-wrapper = { path = "../../packages/ollama-wrapper", editable = true }

[dependency-groups]
dev = ["ipykernel>=6.30.1"]
