[project]
name = "youtube-shorts-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "google-adk>=1.12.0",
  "google-genai>=1.31.0",
  "litellm>=1.76.0",
  "ollama>=0.6.0",
  "ollama-wrapper",
  "openai>=1.101.0",
  "python-dotenv>=1.1.1",
]

[tool.uv.sources]
ollama-wrapper = { path = "../../packages/ollama-wrapper", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]