[project]
name = "hi-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "grandalf==0.8",
  "langchain-community>=0.3.31",
  "langchain-ollama>=0.3.10",
  "langchain[openai]==0.3.27",
  "langgraph==0.6.6",
  "langgraph-checkpoint-sqlite==2.0.11",
  "langgraph-cli[inmem]>=0.4.0",
  "python-dotenv==1.1.1",
  "ollama-wrapper",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]


[tool.uv.sources]
ollama-wrapper = { path = "../../packages/ollama-wrapper", editable = true }
