[project]
name = "simple-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "keonoh00", email = "keonoh00@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
simple-agent = "simple_agent:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
