[project]
name = "simple-chatbot-with-tool-calls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "keonoh00", email = "keonoh00@gmail.com" }
]
requires-python = ">=3.13"
dependencies = ["openai>=2.6.0"]

[project.scripts]
simple-chatbot-with-tool-calls = "simple_chatbot_with_tool_calls:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
